testsuite/tests/linear/should_fail/LinearRecordUpdate.stderr

LinearRecordUpdate.hs:8:12: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        arising from multiplicity of ‘r’
    • In an equation for ‘shouldFail’: shouldFail r = r {y = False}
